--- a/hackathonmobile/pubspec.yaml
+++ b/hackathonmobile/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   file_picker: ^4.6.1
   assets_audio_player: ^3.0.3+3
   intl: ^0.17.0
+  animated_splash_screen: ^1.3.0
+  flutter_svg: ^2.0.4
+  smooth_page_indicator: ^1.0.1
+  badges: ^3.0.3
+  google_nav_bar: ^5.0.6
 
 
   
