--- a/hackathonmobile/pubspec.yaml
+++ b/hackathonmobile/pubspec.yaml
@@ -50,8 +50,9 @@ dependencies:
   smooth_page_indicator: ^1.0.1
   badges: ^3.0.3
   google_nav_bar: ^5.0.6
-
-
+  flutter_riverpod: ^2.3.2
+  timer_controller:
+  jwt_decode: ^0.3.1
   
 
 dev_dependencies:
@@ -79,7 +80,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
