--- a/hackathonmobile/pubspec.yaml
+++ b/hackathonmobile/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   smooth_page_indicator: ^1.0.1
   badges: ^3.0.3
   google_nav_bar: ^5.0.6
+  #flutter_sound: ^9.2.13
+  permission_handler: ^10.2.0
 
 
   
