--- a/hackathonmobile/pubspec.yaml
+++ b/hackathonmobile/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_sound: ^9.2.13
   permission_handler: ^10.2.0
   path_provider: ^2.0.14
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
   
 
 dev_dependencies:
