--- a/hackathonmobile/android/app/src/main/AndroidManifest.xml
+++ b/hackathonmobile/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-        android:label="hackathonmobile"
+        android:label="Doxami"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
